Update index.js file for switching articles 'an' and 'a' for vowels and consonants respectively

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <main class="container">
-    <h1>I am a YouTuber</h1>
+    
   </main>
+  <script src="index.js"></script>
 </body>
 </html>
